refactor: 로그인시 AuthenticationManager 적용